Ensure that our media queries are coming in at the appropriate time for when the navbar collapses.

--- a/BigFont_MVC/assets-10/bigfont/less/bigfont-main.less
+++ b/BigFont_MVC/assets-10/bigfont/less/bigfont-main.less
@@ -1,6 +1,12 @@
 ﻿
 /* content spacing
 -------------------------------------------------- */
+
+body {
+    padding-top: @navbarHeight + 15px;
+}
+
+
 header, footer, hgroup, h1, h2, h3, h4, h5, h6, p, p.lead, dl, dd, dt, ul, li, aside, article {
     margin: 0;
     padding: 0;
@@ -14,7 +20,6 @@ hgroup {
     display: table;
     width: 100%;
     padding-left: 15px; // to match the breadcrumb
-
     h1, h2, h3, h4, h5, h6, span, em {
         float: left;
     }
